# pico-can-bridge

./: .gitignore  CMakeLists.txt  LICENSE-APACHE  LICENSE-MIT  README.md  app.overlay  prj.conf
docs/: known-issues.md  protocol.md  release.md  sdd.md
examples/: README.md  monitor_can.py  send_can.py  user-led.html
examples/feather-m4-can-node/: feather-m4-can-node.ino
patches/: zephyr-cdc-ncm-macos-altsetting.patch
src/: can_bridge.c  can_bridge.h  http_server.c  main.c  storage.c  storage.h  usb_descriptors.c
